--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,33 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
   </dependencies>
+
 
   <build>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <layout>JAR</layout>
+          <mainClass>edu.cnm.deepdive.dicewareservice.DicewareServiceApplication</mainClass>
+        </configuration>
       </plugin>
+
     </plugins>
   </build>
 
