--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
       <artifactId>spring-boot-starter-hateoas</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
+
   </dependencies>
 
 
