added Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,13 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=ddl.sql
 
-
 server.use-forward-headers=true
 server.servlet.context-path=/diceware
 
 spring.thymeleaf.enabled=true
-#Enable for production use (usually).
+# Enable for production use (usually).
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+oauth.clientId=146424801105-elphruf8oploqtke3lpvd02pbvbpvgb2.apps.googleusercontent.com
